--- a/Application/package.json
+++ b/Application/package.json
@@ -11,7 +11,6 @@
     },
     "devDependencies": {
         "@vue/compiler-sfc": "^3.4.27",
-        "axios": "^0.21",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
@@ -22,6 +21,8 @@
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/inertia-vue3": "^0.6.0",
         "@inertiajs/progress": "^0.1.2",
-        "vue": "^3.4.27"
+        "axios": "^1.7.7",
+        "vue": "^3.4.27",
+        "ziggy": "^2.4.0"
     }
 }
