--- a/Application/package.json
+++ b/Application/package.json
@@ -23,6 +23,7 @@
         "@inertiajs/progress": "^0.1.2",
         "axios": "^1.7.7",
         "vue": "^3.4.27",
-        "ziggy": "^2.4.0"
+        "ziggy": "^2.4.0",
+        "ziggy-js": "^2.3.0"
     }
 }
