--- a/Application/package.json
+++ b/Application/package.json
@@ -14,6 +14,7 @@
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
         "postcss": "^8.1.14",
+        "vite-plugin-vue-devtools": "^7.4.6",
         "vue-loader": "^17.3.1",
         "webpack": "^5.91.0"
     },
