--- a/Application/composer.json
+++ b/Application/composer.json
@@ -12,7 +12,9 @@
         "laravel/framework": "^8.75",
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
-        "tightenco/ziggy": "^1.8"
+        "tightenco/ziggy": "^1.8",
+        "twbs/bootstrap": "5.3.1",
+        "twbs/bootstrap-icons": "^1.11"
     },
     "require-dev": {
         "facade/ignition": "^2.5",
