--- a/Application/package.json
+++ b/Application/package.json
@@ -32,6 +32,7 @@
         "bootstrap": "^5.3.1",
         "bootstrap-icons": "^1.11.3",
         "jquery": "^3.7.1",
+        "jquery-mask-plugin": "^1.14.16",
         "sweetalert2": "^11.6.13",
         "vue": "^3.4.27",
         "ziggy": "^2.4.0",
